<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/menu_main_dialog_subscriptions"
        style="@style/Widget.SmartReceipts.TextView.BottomSheetItem.MainMenu.Highlighted"
        android:layout_marginTop="@dimen/margin_normal"
        android:text="@string/menu_main_subscriptions"
        app:drawableEndCompat="@drawable/ic_subscription" />

    <TextView
        android:id="@+id/menu_main_dialog_settings"
        style="@style/Widget.SmartReceipts.TextView.BottomSheetItem.MainMenu"
        android:text="@string/menu_main_settings"
        app:drawableEndCompat="@drawable/ic_settings" />

    <TextView
        android:id="@+id/menu_main_dialog_ocr_configuration"
        style="@style/Widget.SmartReceipts.TextView.BottomSheetItem.MainMenu"
        android:text="@string/menu_main_ocr_configuration" />

    <TextView
        android:id="@+id/menu_main_dialog_backup"
        style="@style/Widget.SmartReceipts.TextView.BottomSheetItem.MainMenu"
        android:text="@string/menu_main_export"
        app:drawableEndCompat="@drawable/ic_backup" />

    <TextView
        android:id="@+id/menu_main_dialog_pro_subscription"
        style="@style/Widget.SmartReceipts.TextView.BottomSheetItem.MainMenu"
        android:text="@string/pro_subscription" />

    <TextView
        android:id="@+id/menu_main_dialog_usage_guide"
        style="@style/Widget.SmartReceipts.TextView.BottomSheetItem.MainMenu"
        android:text="@string/menu_main_usage_guide"
        app:drawableEndCompat="@drawable/ic_info" />

    <TextView
        android:id="@+id/menu_main_dialog_my_account"
        style="@style/Widget.SmartReceipts.TextView.BottomSheetItem.MainMenu"
        android:text="@string/menu_main_my_account" />

    <View
        android:id="@+id/menu_main_dialog_divider"
        style="@style/Widget.View.Divider.Horizontal"
        android:layout_marginHorizontal="@dimen/margin_normal"
        android:layout_marginVertical="0dp"
        android:background="@color/background" />

    <TextView
        android:id="@+id/menu_main_dialog_cancel"
        style="@style/Widget.SmartReceipts.TextView.BottomSheetItem"
        android:layout_marginVertical="@dimen/margin_tiny"
        android:gravity="center"
        android:text="@string/DIALOG_CANCEL"
        android:textStyle="bold" />

</LinearLayout>