<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottom_sheet_item_height"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/padding_large"
        android:paddingEnd="@dimen/padding_large"
        android:text="@string/DIALOG_RECEIPTMENU_TITLE_NEW"
        android:textSize="@dimen/font_subhead" />

    <TextView
        android:id="@+id/new_import_image"
        style="@style/Widget.SmartReceipts.TextView.BottomSheetItem"
        android:text="@string/receipt_attach_image"
        app:drawableStartCompat="@drawable/ic_gallery" />

    <TextView
        android:id="@+id/new_import_pdf"
        style="@style/Widget.SmartReceipts.TextView.BottomSheetItem"
        android:text="@string/pdf"
        app:drawableStartCompat="@drawable/ic_pdf" />

    <TextView
        android:id="@+id/new_text"
        style="@style/Widget.SmartReceipts.TextView.BottomSheetItem"
        android:text="@string/receipt_action_text"
        app:drawableStartCompat="@drawable/ic_text" />

    <TextView
        android:id="@+id/new_image_camera"
        style="@style/Widget.SmartReceipts.TextView.BottomSheetItem"
        android:text="@string/receipt_attach_photo"
        app:drawableStartCompat="@drawable/ic_camera" />

</LinearLayout>