<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:nestedScrollingEnabled="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/padding_large"
            android:paddingEnd="@dimen/padding_large">

            <TextView
                style="@style/Widget.SmartReceipts.TextView.FragmentTitle"
                android:layout_marginStart="0dp"
                android:layout_marginBottom="@dimen/margin_normal"
                android:text="@string/ocr_configuration_welcome" />

            <TextView
                style="@style/Widget.SmartReceipts.TextView.Subhead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_tiny"
                android:text="@string/ocr_configuration_information" />

            <TextView
                style="@style/Widget.SmartReceipts.TextView.Subhead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_tiny"
                android:text="@string/ocr_configuration_information_line2" />

            <TextView
                style="@style/Widget.SmartReceipts.TextView.Subhead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_tiny"
                android:text="@string/ocr_configuration_information_line3" />

            <CheckBox
                android:id="@+id/ocr_is_enabled"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/padding_normal"
                android:paddingEnd="@dimen/padding_normal"
                android:text="@string/ocr_is_enabled"
                android:textAppearance="@style/Widget.SmartReceipts.TextView.Subhead" />

            <CheckBox
                android:id="@+id/ocr_save_scans_to_improve_results"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/padding_normal"
                android:paddingEnd="@dimen/padding_normal"
                android:text="@string/ocr_save_scans_to_improve_results"
                android:textAppearance="@style/Widget.SmartReceipts.TextView.Subhead" />

            <View
                style="@style/Widget.View.Divider.Horizontal"
                android:layout_marginTop="@dimen/margin_normal"
                android:layout_marginBottom="@dimen/margin_normal" />

            <TextView
                style="@style/Widget.SmartReceipts.TextView.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ocr_configuration_available_purchases" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/purchases_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_ocr_purchase" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>