<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:nestedScrollingEnabled="true"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/Widget.SmartReceipts.TextView.FragmentTitle"
                android:layout_marginBottom="@dimen/margin_normal"
                android:text="@string/report_info_generate" />

            <TextView
                android:id="@+id/generate_report_tooltip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_normal"
                android:layout_marginEnd="@dimen/margin_normal"
                android:background="@drawable/bg_rounded_rectangle"
                android:backgroundTint="@color/card_background"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:padding="@dimen/padding_large"
                android:text="@string/generate_report_tooltip"
                android:textColor="@color/smart_receipts_colorPrimary"
                android:textSize="@dimen/font_subhead" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:padding="@dimen/padding_large"
                android:paddingBottom="@dimen/padding_normal"
                android:text="@string/generate_report_subtitle"
                android:textAllCaps="true"
                android:textSize="13sp" />


            <FrameLayout style="@style/Widget.SmartReceipts.GenerateCheckBoxContainer">

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/dialog_email_checkbox_pdf_full"
                    style="@style/Widget.SmartReceipts.GenerateCheckBox"
                    android:text="@string/DIALOG_EMAIL_CHECKBOX_PDF_FULL"
                    app:drawableEndCompat="@drawable/ic_pdf" />
            </FrameLayout>

            <FrameLayout style="@style/Widget.SmartReceipts.GenerateCheckBoxContainer">

                <CheckBox
                    android:id="@+id/dialog_email_checkbox_pdf_images"
                    style="@style/Widget.SmartReceipts.GenerateCheckBox"
                    android:text="@string/DIALOG_EMAIL_CHECKBOX_PDF_IMAGES"
                    app:drawableEndCompat="@drawable/ic_pdf" />
            </FrameLayout>

            <FrameLayout style="@style/Widget.SmartReceipts.GenerateCheckBoxContainer">

                <CheckBox
                    android:id="@+id/dialog_email_checkbox_csv"
                    style="@style/Widget.SmartReceipts.GenerateCheckBox"
                    android:text="@string/DIALOG_EMAIL_CHECKBOX_CSV"
                    app:drawableEndCompat="@drawable/ic_csv" />
            </FrameLayout>

            <FrameLayout style="@style/Widget.SmartReceipts.GenerateCheckBoxContainer">

                <CheckBox
                    android:id="@+id/dialog_email_checkbox_zip"
                    style="@style/Widget.SmartReceipts.GenerateCheckBox"
                    android:text="@string/DIALOG_EMAIL_CHECKBOX_ZIP"
                    app:drawableEndCompat="@drawable/ic_zip" />
            </FrameLayout>

            <FrameLayout style="@style/Widget.SmartReceipts.GenerateCheckBoxContainer">

                <CheckBox
                    android:id="@+id/dialog_email_checkbox_zip_with_metadata"
                    style="@style/Widget.SmartReceipts.GenerateCheckBox"
                    android:text="@string/DIALOG_EMAIL_CHECKBOX_ZIP_WITH_METADATA"
                    app:drawableEndCompat="@drawable/ic_zip" />

            </FrameLayout>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/generate_report_save_switch"
                style="@style/Widget.SmartReceipts.GenerateCheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_normal"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="@dimen/margin_normal"
                android:background="@drawable/bg_rounded_rectangle"
                android:backgroundTint="@color/card_background"
                android:fontFamily="sans-serif-medium"
                android:padding="20dp"
                android:switchPadding="@dimen/padding_large"
                android:text="@string/save_to_device"
                android:textColor="@color/text_primary_color"

                />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/bottom_list_offset" />

        </LinearLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/progress"
        style="@style/Widget.SmartReceipts.ProgressBar.Loading"
        android:visibility="gone"
        tools:visibility="visible" />

</FrameLayout>