<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.bottomappbar.BottomAppBar xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:backgroundTint="@color/bottom_navigation_color"
    android:padding="0dp"
    app:contentInsetStart="0dp"
    app:fabCradleMargin="@dimen/margin_tiny"
    app:fabCradleRoundedCornerRadius="8dp"
    app:hideOnScroll="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/navigation_receipts"
            style="@style/Widget.SmartReceipts.BottomNavigationIcon"
            android:contentDescription="@string/report_info_receipts"
            android:src="@drawable/ic_receipt_new" />

        <ImageView
            android:id="@+id/navigation_distances"
            style="@style/Widget.SmartReceipts.BottomNavigationIcon"
            android:contentDescription="@string/report_info_distance"
            android:src="@drawable/ic_dist_rect" />

        <View
            android:id="@+id/placeholder"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/navigation_generate"
            style="@style/Widget.SmartReceipts.BottomNavigationIcon"
            android:contentDescription="@string/report_info_generate"
            android:src="@drawable/ic_share" />

        <ImageView
            android:id="@+id/navigation_graphs"
            style="@style/Widget.SmartReceipts.BottomNavigationIcon"
            android:contentDescription="@string/report_info_graphs"
            android:src="@drawable/ic_graphs" />

    </LinearLayout>

</com.google.android.material.bottomappbar.BottomAppBar>


