<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/attach_photo"
        style="@style/Widget.SmartReceipts.TextView.BottomSheetItem"
        android:layout_marginTop="@dimen/margin_normal"
        android:paddingStart="@dimen/padding_larger"
        android:paddingEnd="@dimen/padding_larger"
        android:text="@string/receipt_attach_photo"
        app:drawableStartCompat="@drawable/ic_camera" />

    <TextView
        android:id="@+id/attach_picture"
        style="@style/Widget.SmartReceipts.TextView.BottomSheetItem"
        android:layout_gravity="center_vertical"
        android:paddingStart="@dimen/padding_larger"
        android:paddingEnd="@dimen/padding_larger"
        android:text="@string/receipt_attach_image"
        app:drawableStartCompat="@drawable/ic_gallery" />

    <TextView
        android:id="@+id/attach_file"
        style="@style/Widget.SmartReceipts.TextView.BottomSheetItem"
        android:paddingStart="@dimen/padding_larger"
        android:paddingEnd="@dimen/padding_larger"
        android:text="@string/receipt_attach_file"
        app:drawableStartCompat="@drawable/ic_pdf" />

</LinearLayout>